<resources>
    <string name="app_name">GamePod</string>
    <string name="welcome">Welcome</string>
    <string name="text_connect">Please login or create a new account to use the application.</string>
    <string name="password_button">Password</string>
    <string name="connect_button">connexion</string>
    <string name="new_account">Create new account</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_in_header">Sign In</string>
    <string name="text_sign_in">Please enter this information, so that your lists are saved.</string>
    <string name="password_verify">Verify your password</string>
    <string name="username">Username</string>
    <string name="sign_in_button">Sign In</string>
    <string name="already_account">Already have an account ?</string>
    <string name="home">Home</string>
    <string name="know_more">Show more</string>
    <string name="search_bar">Search game…</string>
    <string name="best_sales">Best Sales !</string>
    <string name="send_password">Resend my password</string>
    <string name="forgot_password_description">Please enter your email to reset your password</string>
    <string name="my_likes">My likes</string>
    <string name="empty_likes_text">You have no likes yet. Click on the heart to start adding</string>
    <string name="empty_wish_list_text">You have no wishlist yet. Start adding by click on the stars</string>
    <string name="my_wish_list">My Wishlist</string>
    <string name="details_game_title">Details Game</string>
    <string name="description_game">Description</string>
    <string name="Reviews">Reviews</string>
    <string name="search_header">Search</string>
    <string name="result_search">Number of results :</string>
    <string name="loading">Loading</string>
    <string name="price">"Price : "</string>
</resources>