<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1a2025">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_gravity="center"
            android:fontFamily="@font/googlesans_medium"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="190dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:text="@string/text_connect"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/googlesans_medium"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <EditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="E-mail"
            android:gravity="center"
            android:id="@+id/email"
            android:background="@drawable/custom_edit_text"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/password"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:layout_gravity="center"
            android:hint="@string/password_button"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp">

        <Button
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/connect_button"
            android:id="@+id/connect_button"
            android:background="@drawable/custom_connect_button"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/create_account"
            android:background="@drawable/custom_create_account_button"
            android:text="@string/new_account"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:layout_gravity="bottom"
        android:id="@+id/forgot_password"
        android:text="@string/forgot_password"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/googlesans_medium"/>

</LinearLayout>