<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1a2025"
    tools:context=".ForgotPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/googlesans_bold"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:id="@+id/title"
        android:text="@string/forgot_password"
        android:gravity="center"/>
    <TextView
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:fontFamily="@font/googlesans_medium"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/description_forgot_password"
        android:text="@string/forgot_password_description"/>
    
    <EditText
        android:layout_width="380dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_edit_text"
        android:layout_gravity="center"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:gravity="center"
        android:id="@+id/email"
        android:inputType="text"
        android:layout_height="50dp"
        android:hint="E-mail"/>
    <Button
        android:layout_width="380dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="60dp"
        android:id="@+id/button_reset"
        android:background="@drawable/custom_connect_button"
        android:text="@string/send_password"/>

</LinearLayout>