<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1a2025">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_header"
            android:layout_gravity="center"
            android:fontFamily="@font/googlesans_medium"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="250dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_in"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/googlesans_medium"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        >

        <FrameLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:gravity="center"
                android:inputType="text"
                android:id="@+id/username_field"
                android:background="@drawable/custom_edit_text"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="15dp"
                android:id="@+id/problem_field_username"
                android:src="@drawable/warning"
                android:scaleType="centerInside"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/email_field"
                android:inputType="text"
                android:background="@drawable/custom_edit_text"
                android:layout_gravity="center"
                android:hint="E-mail"
                />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="15dp"
                android:id="@+id/problem_field_email"
                android:src="@drawable/warning"
                android:scaleType="centerInside"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/password_field"
                android:inputType="textPassword"
                android:background="@drawable/custom_edit_text"
                android:layout_gravity="center"
                android:hint="@string/password_button"
                />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="15dp"
                android:id="@+id/problem_field_password"
                android:src="@drawable/warning"
                android:scaleType="centerInside"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="textPassword"
                android:id="@+id/password_verify_field"
                android:background="@drawable/custom_edit_text"
                android:layout_gravity="center"
                android:hint="@string/password_verify"
                />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="15dp"
                android:id="@+id/problem_field_verify_password"
                android:src="@drawable/warning"
                android:scaleType="centerInside"
                />

        </FrameLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp">

        <Button
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/sign_in_button"
            android:id="@+id/submit_button"
            android:background="@drawable/custom_connect_button"
            android:layout_gravity="center"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:layout_gravity="bottom"
        android:id="@+id/already_account"
        android:text="@string/already_account"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/googlesans_medium"/>

</LinearLayout>